--- a/index.html
+++ b/index.html
@@ -26,25 +26,19 @@
     </header>
 
     <div class="nav-bg">
-
         <nav class="navegacion-principal contenedor">
             <a href="#">Inicio</a>
             <a href="#">Sobre Mi</a>
             <a href="#">Clientes</a>
             <a href="#">Contactos</a>
+        </nav>
     </div>
 
-    </nav>
-
-
-
     <section class="hero">
+
         <div class="contenido-hero">
 
             <h2> Diseño y Desarrollo Web <span>Freelancer</span></h2>
-
-
-
 
             <p>
                 <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-map-pin" width="88"
@@ -58,9 +52,8 @@
                 Madrid,España
             </p>
 
-
-
             <a class="boton" href="#">Contactar</a>
+
         </div>
 
     </section>
@@ -87,7 +80,7 @@
                         <circle cx="16.5" cy="10.5" r=".5" fill="currentColor" />
                     </svg>
                 </div>
-                
+
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem a praesentium illo, laboriosam
                     blanditiis
                     iste
@@ -156,64 +149,52 @@
             </section>
         </div>
 
-   
+
+        <section>
+            <h2>Contacto</h2>
+
+            <form class="formulario">
+                <fieldset>
+                    <legend>Contactanos llenando todos los campos</legend>
+
+                    <div class="contenedor-campos">
+
+                        <div class="campo">
+                            <label>Nombre</label>
+                            <input class="input-tex" type="text" placeholder="Tu nombre">
+                        </div>
+
+                        <div class="campo">
+                            <label>Teléfono</label>
+                            <input class="input-tex" type="tel" placeholder="tu teléfono">
+                        </div>
+
+                        <div class="campo">
+                            <label>Correo</label>
+                            <input class="input-tex" type="email" placeholder="tu email">
+                        </div>
 
 
+                        <div class="campo">
+                            <label>Mensaje</label>
 
-    <section>
-        <h2>Contacto</h2>
+                            <textarea class="input-tex"></textarea>
+                        </div>
 
-        <form class="formulario">
-            <fieldset>
-                <legend>Contactanos llenando todos los campos</legend>
+                    </div>
+                    <!--.contenedor-campos-->
+                    <div class="alinear-derecha flex">
+                        <input class="boton w-sm-100" type="submit" value="Enviar">
+                    </div>
 
-                <div class="contenedor-campos">
-
-                <div class="campo">
-                    <label>Nombre</label>
-                    <input class="input-tex" type="text" placeholder="Tu nombre">
-                </div>
-
-                <div class="campo">
-                    <label>Teléfono</label>
-                    <input class="input-tex" type="tel" placeholder="tu teléfono">
-                </div>
-
-                <div class="campo">
-                    <label>Correo</label>
-                    <input class="input-tex" type="email" placeholder="tu email">
-                </div>
-
-
-                <div class="campo">
-                    <label>Mensaje</label>
-
-                    <textarea class="input-tex"></textarea>
-                </div>
-
-            </div> <!--.contenedor-campos-->
-                <div class="alinear-derecha flex">
-                    <input class="boton w-sm-100" type="submit" value="Enviar">
-                </div>
-
-
-
-
-            </fieldset>
-        </form>
-    </section>
-</main>
+                </fieldset>
+            </form>
+        </section>
+    </main>
 
     <footer class="footer">
         <p>Todos los derechos reservados</p>
-
-
     </footer>
 
-
-
-
-
 </body>
-
 </html>
